Revision history for Test-BrewBuild

1.05_02 xxx

1.05_01 2016-04-19
        - we can now distribute test builds to remote Test::BrewBuild test
          servers
        - bbdispatch and bbtester scripts added, which handle the test
          distribution network/systems
        - Dispatch.pm and Tester.pm modules, containing the APIs for the
          distribution setup
        - we no longer now print anything out by default; everything is
          returned, and its up to end-user to handle
        - major debug logging improvements
        - significant code cleanup and tests implemented
        - added/improved upon the flags for the ``brewbuild'' script

1.05    2016-04-04
        - we're now Dist::Zilla compliant and tested (closes #33)
        - added _dzil_shim() and _dzil_unshim() for Dist::Zilla distributions
        - bumped prereq of TestAgainst plugin to 0.06
        - added -T (--selftest), to prevent recursive testing loops when 
          testing this distribution
        - POD updates
        - stderr.bblog as well as cpanm build.log files are now aggregated into
          the FAIL log reports (closes #61 and #62)
        - added -T, --selftest, to avoid recursive testing of Test::BrewBuild
          with the BBDEV_TESTING env var set

1.04    2016-04-01
        - ensure FAIL files are created properly and test (closes #53)
        - fix issue where --on wasn't setting up the environment correctly
          (fixes #54)
        - on Unix, we catch if an installed version is attempting to be
          installed, instead of letting perlbrew handle it (closes #50)
        - prereq 'version' added to correctly get version info from pre 5.10
          (fixes #51)
        - renamed --version|-v to --install|-i
        - added --notest|-N, allows install/remove without running exec()
          (closes #49)
        - added --setup|-s, displays Windows and Unix test platform setup guide