@@ -16,63 +16,64 @@ MANIFEST.SKIP
 README
 setup/unix_setup.txt
 setup/windows_setup.txt
-t/00-load.t
-t/01-plugins.t
-t/02-brew_info.t
-t/03-perls_available.t
-t/04-is_win.t
-t/05-perls_installed.t
-t/06-log.t
-t/07-BrewCommands.t
-t/08-instance_remove.t
-t/09-instance_install.t
-t/12-TestPluginInst.t
-t/14-using.t
+t/00-00-load.t
+t/00-01-plugins.t
+t/00-02-brew_info.t
+t/00-15-perls_avaliable.t
+t/00-20-is_win.t
+t/00-25-perls_installed.t
+t/00-30-log.t
+t/00-35-BrewCommands.t
+t/00-40-instance_remove.t
+t/00-45-instance_install.t
+t/00-50-TestPluginInst.t
+t/00-55-using.t
+t/10-05-api-Tester.t
+t/10-10-api-Git.t
+t/10-15-api-Dispatch_forks.t
+t/10-20-api-BrewBuild_legacy.t
+t/20-05-bb-pass.t
+t/20-10-bb-fail.t
+t/20-15-bb-install.t
+t/20-20-bb-pass_fail_multi.t
+t/20-25-bb-debug.t
+t/20-30-bb-remove.t
+t/20-35-bb-pass_with_fail.t
+t/20-40-bb-on.t
+t/20-45-bb-invalid_args.t
+t/20-50-bb-revdep_single.t
+t/20-55-bb-revdep-multi.t
+t/20-60-bb-revdep_multi_fail.t
+t/20-65-bb-dzil.t
+t/20-70-bb-new.t
+t/20-75-bb-notest.t
+t/30-05-dispatch-bad_command.t
+t/30-10-dispatch-revdep_pass.t
+t/30-15-dispatch-fail.t
+t/30-20-dispatch-autofind_repo.t.norun
+t/30-25-dispatch-default_port.t
+t/30-30-dispatch-notest.t
+t/30-35-dispatch-confit.g
+t/40-05-log-revdep_global_full_verbose.t
+t/40-10-log-revdep_save_log_files.t
+t/40-15-log-Tester.t
+t/40-20-log-Dispatch.t
+t/40-25-log-test_global_full_verbose.t
+t/50-05-tester-config.t
+t/99-manifest.t
+t/99-pod-coverage.t
+t/99-pod.t
 t/__clean.t
-t/api-05-Tester.t
-t/api-10-Git.t
-t/api-15-Dispatch_forks.t
-t/api-BrewBuild-legacy.t
 t/base/115-level6.data
 t/base/115-level6_win.data
 t/base/115-level7.data
 t/base/115-level7_win.data
 t/base/UnitTestPlugin.pm
-t/bb-00-pass.t
-t/bb-01-fail.t
-t/bb-02-install.t
-t/bb-04-pass_fail_multi.t
-t/bb-15-debug.t
-t/bb-20-new.t
-t/bb-25-remove.t
-t/bb-30-pass_with_fail.t
-t/bb-35-on.t
-t/bb-40-invalid_args.t
-t/bb-45-revdep-single.t
-t/bb-50-revdep-multi.t
-t/bb-55-notest.t
-t/bb-60-revdep-multi-fail.t
-t/bb-65-dzil.t
 t/conf/brewbuild.conf
 t/conf/brewbuild_no_tester.conf
-t/dispatch-05-bad_command.t
-t/dispatch-11-revdep_pass.t
-t/dispatch-15-fail.t
-t/dispatch-20-autofind_repo.t.norun
-t/dispatch-25-default_port.t
-t/dispatch-40-notest.t
-t/dispatch-45-config.t
-t/log-05-revdep_global_full_verbose.t
-t/log-10-revdep_save_log_files.t
-t/log-15-Tester_log.t
-t/log-20-Dispatch_log.t
-t/manifest.t
 t/modules/bb-522.zip
 t/modules/bb-fail.zip
 t/modules/bb-pass.zip
 t/modules/dzil-test.zip
 t/modules/mock-sub-bad.zip
 t/modules/mock-sub.tgz
-t/pod-coverage.t
-t/pod.t
-t/tester-05-config.t
