@@ -1,6 +1,9 @@
 Revision history for Test-BrewBuild
 
 1.05_02 xxx
+        - we now set up a log file within Tester for BrewBuild if Tester is
+          logging, but not to STDOUT
+
 
 1.05_01 2016-04-19
         - we can now distribute test builds to remote Test::BrewBuild test
